--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 *.dll
 *.so
 *.dylib
-
+enwik9
+enwik9.zip
 # Test binary, built with `go test -c`
 *.test
 
@@ -20,3 +21,4 @@
 # Go workspace file
 go.work
 .vscode
+/
